--- a/config/settings.tex
+++ b/config/settings.tex
@@ -44,7 +44,7 @@
 
 \usepackage{csquotes}
 \usepackage[natbib=true]{biblatex}
-\bibliography{biblio/bibliografia}
+\bibliography{biblio/biblio}
 
 \usepackage{ifmtarg}   % empty commands  
 
