--- a/main.tex
+++ b/main.tex
@@ -96,7 +96,7 @@
 % koniec fragmentu do modyfikacji
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\input{./config/settings.tex} % Proszę nie modyfikować pliku settings.tex
+\input{config/settings.tex} % Proszę nie modyfikować pliku settings.tex
 
 % Poniżej można dodać słowa kluczowe dla
 \lstset{%
