--- a/config/titlepage.tex
+++ b/config/titlepage.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                             %
 % PROSZĘ NIE MODYFIKOWAĆ PONIŻSZYCH USTAWIEŃ! %
-%                                             %
+%                   main                          %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
